[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-cluster-capacity-simulator"
version = "0.1.0"
description = "GPU cluster capacity simulator for AI workloads (utilization, queueing, cost)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "matplotlib>=3.8",
]

# Optional extra specifically for running the Streamlit demo locally
demo = [
  "streamlit>=1.36",
  "plotly>=5.20",
]

[project.scripts]
gpu-sim = "gpu_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
